[tool.poetry]
name = "aio-mc-rcon"
version = "3.2.1"
description = "An async library for utilizing remote console on Minecraft Java Edition servers"
authors = ["Milo Weinberg <iapetus011@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Iapetus-11/aio-mc-rcon"
keywords = ["rcon", "mcrcon", "async"]
packages = [{ include = "aiomcrcon" }]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.11b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py37', 'py38']
include = '\.pyi?$'
