[tool.poetry]
name = "aio-mc-rcon"
version = "3.4.1"
description = "An async library for utilizing remote console on Minecraft Java Edition servers"
authors = ["Milo Weinberg <iapetus011@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Iapetus-11/aio-mc-rcon"
keywords = ["rcon", "mcrcon", "async", "remote console", "minecraft"]
packages = [{ include = "aiomcrcon" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
